# python-nlql

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  README.zh-CN.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.claude/: index.json  launch.json
.github/workflows/: docs.yml  publish.yml
benchmarks/: README.md  bench.py
docs/: hooks.py
docs/en/: index.md  performance.md
docs/en/about/: license.md
docs/en/content/concepts/: architecture.md  data-model.md  evaluation.md  hybrid-pushdown.md  index-cache.md  ingestion.md  multimodal.md  overview.md  registry.md  store-protocol.md  syntax.md  three-entries.md  type-system.md
docs/en/content/tutorials/: document-loading.md  hybrid-stores.md  llm-function-calling.md  multimodal-search.md  query-builder.md  quickstart.md  reranking.md
docs/en/reference/: embed.md  errors.md  exec.md  index.md  ingest.md  ir.md  lang.md  loaders.md  model.md  plan.md  registry.md  rerank.md  sdk.md  store.md  types.md
docs/zh/: index.md  performance.md
docs/zh/about/: license.md
docs/zh/content/concepts/: architecture.md  data-model.md  evaluation.md  hybrid-pushdown.md  index-cache.md  ingestion.md  multimodal.md  overview.md  (+5 more)
docs/zh/reference/: embed.md  errors.md  exec.md  index.md  ingest.md  ir.md  lang.md  loaders.md  model.md  plan.md  registry.md  rerank.md  sdk.md  store.md  types.md
eval/: README.md  judge.py  llm.py  report.md  run.py
eval/data/: datasets.py  ms_marco.py  scifact.py
eval/pipelines/: base.py  langchain_rag.py  nlql_rag.py
examples/: document_loading.py  doubao_vision_search.py  hybrid_stores.py  llm_function_calling.py  multimodal_search.py  multivector.py  openai_semantic.py  quickstart.py  reranking.py
src/: CLAUDE.md
src/nlql/: CLAUDE.md  __init__.py  errors.md  errors.py
src/nlql/embed/: CLAUDE.md  __init__.py  base.py  cache.py  clip.py  doubao.py  fake.py  multimodal.py  openai.py  sentence_transformers.py
src/nlql/exec/: CLAUDE.md  __init__.py  evaluate.py  executor.py
src/nlql/ingest/: CLAUDE.md  __init__.py  language.py  normalize.py  pipeline.py  splitters.py
src/nlql/ir/: CLAUDE.md  __init__.py  nodes.py  schema.py
src/nlql/lang/: CLAUDE.md  __init__.py  grammar.lark  parser.py  transformer.py
src/nlql/loaders/: CLAUDE.md  __init__.py  base.py  docx_loader.py  pdf_loader.py  text.py
src/nlql/model/: CLAUDE.md  __init__.py  document.py  payload.py  unit.py  vector.py
src/nlql/plan/: CLAUDE.md  __init__.py  plan.py  planner.py  pushdown.py
src/nlql/registry/: CLAUDE.md  __init__.py  builtins.py  core.py
src/nlql/rerank/: CLAUDE.md  __init__.py  base.py  cross_encoder.py
src/nlql/sdk/: CLAUDE.md  __init__.py  builder.py  engine.py
src/nlql/store/: CLAUDE.md  __init__.py  base.py  chroma_store.py  columns.py  common.py  faiss_store.py  filter.py  hnsw_store.py  local.py  pgvector_store.py  qdrant_store.py
src/nlql/types/: CLAUDE.md  __init__.py  coerce.py  core.py
tests/: conftest.py  test_builder.py  test_chroma_store.py  test_columns.py  test_cross_store.py  test_doubao.py  test_embed.py  test_exec.py  test_expressions.py  test_faiss_store.py  test_hnsw_store.py  test_ingest.py  test_ir.py  test_lang.py  test_language.py  test_loaders.py  test_model.py  test_multimodal.py  test_multivector.py  test_pgvector_store.py  test_pushdown.py  test_qdrant_store.py  test_registry.py  test_rerank.py  test_sdk.py  test_store.py  test_type_system.py  test_types.py
(+7 files in other folders)
