[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-nlql"
version = "0.3.0"
description = "SQL-style semantic query language and retrieval middleware for Agents & RAG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Okysu" }]
keywords = ["nlp", "rag", "agent", "query-language", "vector-search", "semantic-search", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

# Core dependencies — must install cleanly on every supported platform / Python.
# numpy: vector ops + exact FlatIndex.  lark: NLQL grammar.  httpx: OpenAI-compatible embedder.
dependencies = [
    "numpy>=2.1",
    "lark>=1.1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Optional local embedding backend (heavy: pulls torch). Lazy-loaded, never a hard dep.
local = ["sentence-transformers>=2.2.0"]
# Optional ANN accelerators behind the same Store protocol (native builds).
hnsw = ["hnswlib>=0.8.0"]
faiss = ["faiss-cpu>=1.7.0"]
# Optional external vector-store adapters (M2 pushdown).
qdrant = ["qdrant-client>=1.7.0"]
chroma = ["chromadb>=0.4.0"]
pgvector = ["psycopg[binary]>=3.1", "pgvector>=0.2.0"]
# Optional robust sentence segmentation backend (M4); jieba/spaCy plug in the same way.
segment = ["pysbd>=0.3.4"]
# Optional document loaders (DOCX / PDF).
loaders = ["python-docx>=1.1", "pypdf>=4.0"]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# Documentation build (MkDocs Material + mkdocstrings + llms.txt). Independent from dev —
# CI builds docs with: pip install -e ".[docs]". Kept light; pymdownx ships with mkdocs-material.
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-static-i18n>=1.2.0",
]

[project.urls]
Repository = "https://github.com/natural-language-query-language/python-nlql"

[tool.hatch.build.targets.wheel]
packages = ["src/nlql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
# 3.12 (not our 3.11 floor) because numpy>=2.x type stubs use 3.12 `type` syntax;
# our own code stays 3.11-compatible (only `X | Y` unions and StrEnum).
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["lark.*", "sentence_transformers.*", "faiss.*", "qdrant_client.*", "pysbd.*", "PIL.*", "pgvector.*", "hnswlib.*", "docx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.coverage.run]
source = ["src/nlql"]
branch = true
